kubernetes/environments/test/apps/it-info-versand/service.yaml
---
# IT-Info-Versand Service (ClusterIP) (TEST)
apiVersion: v1
kind: Service
metadata:
  name: it-info-versand
  namespace: it-info-versand
  labels:
    app.kubernetes.io/name: it-info-versand
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: it-info-versand
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
